:tada: Release of add-on Collabora Online Development Edition (CODE) 0.2.0

--- a/collabora-code/config.yaml
+++ b/collabora-code/config.yaml
@@ -3,7 +3,8 @@ slug: collabora-code
 description: Collabora Online Development Edition - an awesome, Online Office suite
   image suitable for home use.
 url: https://github.com/matthiasbalke/addon-collabora-code
-version: 0.1.0
+version: 0.2.0
+stage: experimental
 image: ghcr.io/matthiasbalke/collabora-code/{arch}
 init: false
 startup: services
@@ -19,14 +20,14 @@ ports_description:
 map:
 - addon_config:rw
 options:
-  dont_gen_ssl_cert: true
   username: ''
   password: ''
-  extra_params: --o:logging.level=information --o:logging.color=false --o:ssl.enable=false
+  generate_ssl_certificate: false
+  coolwsd_arguments: --o:logging.level=information --o:logging.color=false --o:ssl.enable=false
     --o:ssl.termination=true
 schema:
   username: str
   password: password
   server_name: str?
-  dont_gen_ssl_cert: bool
-  extra_params: str?
+  generate_ssl_certificate: bool
+  coolwsd_arguments: str?
